# uncloakCUDA

./: .gitignore  CMakeLists.txt  README.md  cliondoesnthandlecuda.h  hash.cu  hash.h  host.cu  host.h  ip4.cu  ip4.h  ip6.cu  ip6.h  itdoesnothingbutfixesclion.c  main.cu
